# yamlcv

./: .dockerignore  .gitignore  README.md  TESTING.md  docker-compose.yml  install.sh  pyproject.toml  server.py
templates/classic/: build.py  details.yml  schema.yml
templates/jake/: build.py  details.yml  schema.yml  template.tex
tests/: __init__.py  test_server.py
ui/: index.html  spectacle.css  styles.css
ui/js/: api.js  app-data.js  app.js  autosave.js  callbacks.js  drag-drop.js  form-collector.js  form-renderer.js  formatting.js  layout.js  profiles.js  reset.js  shortcuts.js  spectacle.js  state.js  tutorial.js  ui.js  undo.js  utils.js
