[project]
name = "resumekit"
version = "0.1.0"
description = "YAML-driven LaTeX resume builder with web UI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
